# BillsManagementProject

./: CMakeLists.txt  main.cpp
cit-284/project/bills/management/creditors/: qcreditors.cpp  qcreditors.h  qcreditors.ui
cit-284/project/bills/management/list_credits/: qcreditlist.cpp  qcreditlist.h  qcreditlist.ui
cit-284/project/bills/management/list_payments/: qpaymentlist.cpp  qpaymentlist.h  qpaymentlist.ui
cit-284/project/bills/management/login/: qlogin.cpp  qlogin.h  qlogin.ui
cit-284/project/bills/management/new_credit/: qnewcredit.cpp  qnewcredit.h  qnewcredit.ui
cit-284/project/bills/management/new_creditor/: newcreditor.cpp  newcreditor.h  newcreditor.ui
cit-284/project/bills/management/new_payment/: qnewpayment.cpp  qnewpayment.h  qnewpayment.ui
cit-284/project/bills/management/signup/: qsignup.cpp  qsignup.h  qsignup.ui
cit-284/project/bills/models/credit/: Credit.cpp  Credit.h
cit-284/project/bills/models/creditor/: Creditor.cpp  Creditor.h
cit-284/project/bills/models/manager/: Manager.cpp  Manager.h
cit-284/project/bills/models/payment/: Payment.cpp  Payment.h
cit-284/project/bills/models/user/: User.cpp  User.h
data/: creditors.txt  credits.txt  payments.txt  users.txt
